# Fractales_2.0

./: .gitignore  CMakeLists.txt  a.out  main.cpp
image_git/: pallette1.tiff  x³-1 .tiff  x³-1 classic .tiff  x³-2x+2.tiff  x¹⁴ + --.tiff
src/: CMakeLists.txt  Fractale.cpp  Fractale.hpp  Julia.hpp  Mendelbrot.hpp  Newton.hpp  Polynome.cpp  Polynome.hpp  calculs.cpp  calculs.hpp  interface.cpp  interface.hpp  options.cpp  options.hpp
